--- a/london/app/Home.module.css
+++ b/london/app/Home.module.css
@@ -127,11 +127,12 @@
     overflow: hidden;
     margin-top: 1rem;
   }
-  
+
+
   .slide {
     position: relative;
+    height: 800px;
     width: 100%;
-    height: 100%;
   }
   
   .slideImage {
