--- a/london/app/Home.module.css
+++ b/london/app/Home.module.css
@@ -36,16 +36,63 @@
   }
   
   .scrollableListItem {
+    display: flex;
+    flex-direction: column;  
+    justify-content: flex-start;
+    align-items: flex-start;
     padding: 1rem;
     border-radius: 0.75rem;
     margin-bottom: 0.5rem;
     font-size: 1.05rem;
     color: #1f2937;
-    cursor: pointer;
     background: white;
     transition: all 0.2s ease-in-out;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
+    position: relative;
   }
+  
+  
+  .itemText {
+    flex: 1;
+  }
+  
+  .iconGroup {
+    display: flex;
+    align-items: center;  
+    gap: 0.4rem;
+  }
+  
+  .itemIcon {
+    flex-shrink: 0;
+    margin-left: 0.4rem;
+  }
+  
+  .icon_wine {
+    width: 22px;
+    height: 22px;
+  }
+  
+  .icon_beer {
+    width: 18px;
+    height: 18px;
+    /* transform: translateY(3px); */
+  }
+  
+  .icon_dance {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .itemHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  
+  
+
+  
   
   .scrollableListItem:hover {
     background: #e9e9e9;
@@ -76,6 +123,8 @@
     line-height: 1.7;
     width: 100%;
     box-sizing: border-box;
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
 }
 
 .cafesTitleBox {
@@ -84,6 +133,8 @@
     justify-content: flex-start;
     margin-bottom: 0.5rem;
     margin-top: 2rem;
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
 }
 
 .cafesTitle {
