--- a/london/app/Home.module.css
+++ b/london/app/Home.module.css
@@ -332,3 +332,24 @@
   }
   
   
+  @media (max-width: 768px) {
+    .mapContainer {
+      flex-direction: column;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      gap: 1rem;
+    }
+
+    .scrollableList {
+        width: 100%;
+        max-height: none; /* allow full height scrolling on mobile */
+        margin-left: 0;
+      }
+  
+    .map {
+      width: 100%;
+      height: 400px; /* adjust height for mobile if needed */
+    }
+
+  }
+  
